<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="#FFFFFF"
    >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="horizontal"
        android:background="#FFFFFF">


        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            />

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            >
            <ImageButton
                android:id="@+id/btnleft"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent" />
        </LinearLayout>


        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">

                <ImageButton
                    android:id="@+id/btnright"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent" />

            </LinearLayout>


        </RelativeLayout>
    </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/cs_type"
                android:text="@string/text_type"
                android:textSize="16sp"
                android:textColor="#30a40d"/>

            <TextView
                android:id="@+id/tvtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cs"
                android:textSize="16sp" />

            <View
                android:id="@+id/UnderLine"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="2dp"
                android:background="#a7a6a9" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="16sp"
                android:textColor="#30a40d"/>

            <TextView
                android:id="@+id/tvname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="2dp"
                android:background="#a7a6a9" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/cs_marker"
                android:text="@string/text_add"
                android:textSize="16sp"
                android:textColor="#30a40d"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvadd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:textSize="16sp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="2dp"
                android:background="#a7a6a9" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="16sp"
                android:textColor="#30a40d"
                android:drawableLeft="@drawable/cs_phone"/>

            <TextView
                android:id="@+id/tvphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="2dp"
                android:background="#a7a6a9" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:src="@drawable/car" />

                <TextView
                    android:id="@+id/tvsend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/send_delivery"
                    android:textSize="15sp"
                    android:layout_weight="4.5"
                    android:padding="2dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/tvreceive"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/receive_delivery"
                    android:textSize="15sp"
                    android:layout_weight="4.5"
                    android:padding="2dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:visibility="invisible"/>
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:textColor="#30a40d"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/listservice"
                    style="@style/TwoWayView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:textColor="#30a40d"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/listpayment"
                    style="@style/TwoWayView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />
            </LinearLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/cs_note"
                android:text="@string/text_note"
                android:textSize="16sp"
                android:textColor="#30a40d"/>

            <TextView
                android:id="@+id/tvnote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="2dp"
                android:background="#a7a6a9" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/tag"
                style="@style/TwoWayView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/btn_report"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@drawable/cs_btn_report"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginEnd="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/cs_report" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/text_report"
                            android:textColor="#30a40d"
                            android:textSize="17sp" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/btn_edit"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@drawable/cs_btn_edit"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/cs_edit" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/text_edit"
                            android:textColor="#FFFFFF"
                            android:textSize="17sp" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/privacy_policy"
                android:textSize="16dp"
                 />
        </LinearLayout>

    </LinearLayout>
</ScrollView>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>