<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="#FFFFFF"
    >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="horizontal"
            android:background="#FFFFFF">


            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                />

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                >
                <ImageButton
                    android:id="@+id/btnleft"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent" />
            </LinearLayout>


            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true">

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true">

                    <ImageButton
                        android:id="@+id/btnright"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent" />

                </LinearLayout>


            </RelativeLayout>
        </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/sm_type"
            android:text="@string/text_type"
            android:textColor="#015d46"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvtype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sm"
            android:textSize="16sp" />

        <View
            android:id="@+id/UnderLine"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="2dp"
            android:background="#a7a6a9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#015d46"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="2dp"
            android:background="#a7a6a9" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/sm_marker"
            android:text="@string/text_add"
            android:textColor="#015d46"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvadd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="2dp"
            android:background="#a7a6a9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_of_road"
            android:textColor="#015d46"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvroadguide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="2dp"
            android:background="#a7a6a9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/sm_phone"
            android:text="@string/phone_number"
            android:textColor="#015d46"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="2dp"
            android:background="#a7a6a9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/working_time"
            android:textColor="#015d46"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvtime_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="~"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvtime_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="2dp"
            android:background="#a7a6a9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/service"
            android:textColor="#015d46"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/listservice"
                style="@style/TwoWayView"
                android:layout_width="match_parent"
                android:layout_height="30dp" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/sm_note"
            android:text="@string/text_note"
            android:textColor="#015d46"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvnote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_note"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="2dp"
            android:background="#a7a6a9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/style_sm"
            android:textColor="#015d46"
            android:textSize="16sp" />
            <TextView
                android:id="@+id/style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="2dp"
                android:background="#a7a6a9" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/tag"
                style="@style/TwoWayView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:id="@+id/btn_report"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/sm_btn_report"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/sm_report" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/text_report"
                            android:textColor="#015d46"
                            android:textSize="17sp" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/btn_edit"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/sm_btn_edit"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/sm_edit" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/text_edit"
                            android:textColor="#FFFFFF"
                            android:textSize="17sp" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/privacy_policy"
                android:textSize="16dp"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>